# fanshi1028.github.io

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  about.rst  app.cabal  blog.cabal  cabal.project  cabal.project.dev  contact.markdown  default.nix  fanshi1028-site.cabal  features.org  flake.nix  hie.yaml  index.html  package.json  pnpm-lock.yaml  shell.nix  site.hs  svelte.config.js  tailwind.config.ts  temp-fix.js  vite.config.ts  wasm.cabal.project  wasm.cabal.project.freeze
.github/workflows/: deploy.yml  dev_env.yml  main.yml
app/: Clock.hs  Main.hs  Pomodoro.hs  ProductRequirementDocument.hs
app.wasmexe/: index.html
docs/: about.html  archive.html  contact.html  index.html
docs/posts/: 2022-01-13-first-post.html  2022-01-14-quick-design-pattern-recognition.html
embed/Embed/: CSS.hs  Dev.hs
js-src/: index.js  temp-fix.js
materialized/hakyll/: default.nix
materialized/hakyll/.plan.nix/: hakyll.nix
materialized/haskell-nix/: default.nix
materialized/haskell-nix-posts/: default.nix
materialized/haskell-nix-posts/.plan.nix/: blog.nix
materialized/hoogle/: default.nix
materialized/hoogle/.plan.nix/: hoogle.nix
nix/: bun-build.nix  fanshi1028-site.nix  ghciwatch-commands.nix  haskell-overrides.nix  haskell-source-overrides.nix  npm-shell.nix  pkgs.nix  sources.json
posts/: 2022-01-13-first-post.org  2022-01-14-quick-design-pattern-recognition.org  What-is-the-purpose-of-this-website.org  shell.nix
prerender/: Main.hs
src/: App.hs  Clock.hs  Dashboard.hs  Home.hs  MapLibre.hs  Pomodoro.hs  ProductRequirementDocument.hs  Route.hs
src/App/: Types.hs  Update.hs  View.hs
src/Clock/: View.hs
src/Component/: Clock.hs  Dashboard.hs  Pomodoro.hs  Popover.hs
src/Component/Clock/: View.hs
src/Component/Dashboard/: Types.hs  View.hs
src/Component/Dashboard/View/: CurrentWeather.hs  WeatherForcast.hs
src/Component/Foreign/: MapLibre.hs
src/Component/Pomodoro/: View.hs
src/Dashboard/: UVIndex.hs  View.hs
src/Dashboard/DataSource/: BrowserGeolocationAPI.hs  DataGovHK.hs  HongKongObservatoryWeatherAPI.hs  IO.hs  JSM.hs  LocalStorage.hs  MisoRun.hs  MisoRunAction.hs
src/Dashboard/DataSource/DataGovHK/: URI.hs
src/Dashboard/DataSource/HongKongObservatoryWeatherAPI/: Types.hs
src/DataSource/: BrowserGeolocationAPI.hs  CommonSpatialDataInfrastructurePortal.hs  HongKongObservatoryWeatherAPI.hs  IO.hs  JSM.hs  LocalStorage.hs  MisoRun.hs  SimpleFetch.hs
src/DataSource/HongKongObservatoryWeatherAPI/: Types.hs
src/Haxl/: LocalStorage.hs
src/Pomodoro/: View.hs
src/ProductRequirementDocument/: Dashboard.hs  Home.hs  Pomodoro.hs
src/Route/: Types.hs  View.hs
src/Utils/: Dimensional.hs  Fetch.hs  Haxl.hs  IntervalPeriod.hs  JS.hs  JSON.hs  Serialise.hs  Time.hs
src/Utils/Fetch/: CSV.hs
src/Utils/SVG/: LoadSpinner.hs  ToggleLangButton.hs
src/View/: ProductRequirementDocument.hs
src/View/ProductRequirementDocument/: Dashboard.hs  Home.hs  Pomodoro.hs
src/View/SVG/: LoadSpinner.hs  ToggleLangButton.hs
src/lib/server/: org_post.ts
src/routes/: +page.svelte
src/routes/(org)/: +layout.server.ts  +layout.svelte  orgThemeChooser.svelte  orgThemes.ts
src/routes/(org)/features/: +page.server.ts  +page.svelte
src/routes/(org)/posts/[slug]/: +page.server.ts  +page.svelte  descriptionList.svelte  descriptionListItem.svelte  list.svelte  listLike.svelte  orderedList.svelte  outlineText.svelte  section.svelte  sectionContent.svelte  sectionText.svelte  textContent.svelte  types.ts  unorderedList.svelte
src/routes/posts/[slug]/: +layout.svelte  +page.server.ts  +page.svelte
static/: index.html  index.js  wasm.js
static/wasm/: index.js
templates/: default.html
typescript/maplibre-gl-ffi/: hard_surface_soccer_pitch_7.ts  index.ts  package-lock.json  package.json  tsconfig.json  utils.ts
typescript/maplibre-gl-ffi/sources/: districtBoundary.ts  district_boundary.ts  hard_surface_soccer_pitch_7.ts  weather_stations.ts
typescript/wasm-entry/: index.ts  package-lock.json  package.json  tsconfig.json
