cabal-version:      3.0
name:               blog
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions: OverloadedStrings
