cabal-version: 3.0
name:          blog
version:       0.1.0.0
build-type:    Simple

executable site
  main-is:            site.hs
  build-depends:
    , base    >=4    && <5
    , hakyll  ^>=4.15
    , pandoc

  ghc-options:
    -W -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Wnoncanonical-monad-instances -O2 -j4 +RTS -A64m -n2m
    -RTS -threaded

  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    OverloadedStrings

  extra-source-files:
    about.rst
    contact.markdown
    css/*.css
    index.html
    LICENSE
    README.md
    templates/*.html
