cabal-version: 3.0
name: fanshi1028-site
version: 0.1.0.0
synopsis: fanshi1028's personal site
description: fanshi1028's personal site
license: MIT
license-file: LICENSE
author: fanshi1028
maintainer: fanshi1028
copyright: fanshi1028 @ 2025
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

-- NOTE: https://mercurytechnologies.github.io/ghciwatch/integration/multiple-components.html
flag local-dev
  description: enable local dev (for using ghciwatch)
  default: False
  manual: True

flag production
  description: production
  default: False
  manual: True

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"

    cpp-options:
      -DWASM

common lib
  build-depends:
    aeson,
    async,
    base <5,
    base64,
    bytestring,
    cassava,
    cborg-json,
    containers,
    data-interval,
    dataframe,
    dimensional,
    hashable,
    haxl,
    http-types,
    jsaddle,
    lens,
    miso,
    mtl,
    network-uri,
    retry,
    scientific,
    serialise,
    text,
    time,
    unliftio,
    validation-selective,

  hs-source-dirs:
    src

  if flag(local-dev)
    -- cabal-gild: discover src
    other-modules:
      Clock
      Dashboard
      Dashboard.DataSource.BrowserGeolocationAPI
      Dashboard.DataSource.DataGovHK.URI
      Dashboard.DataSource.HongKongObservatoryWeatherAPI
      Dashboard.DataSource.IO
      Dashboard.DataSource.JSM
      Dashboard.DataSource.LocalStorage
      Dashboard.DataSource.MisoRun
      Haxl.LocalStorage
      Home
      MapLibre
      Pomodoro
      ProductRequirementDocument
      ProductRequirementDocument.Dashboard
      ProductRequirementDocument.Home
      ProductRequirementDocument.Pomodoro
      Route
      Route.View
      Utils.Dimensional
      Utils.Fetch
      Utils.JS
      Utils.Serialise

library
  import: lib
  -- cabal-gild: discover src
  exposed-modules:
    Clock
    Dashboard
    Dashboard.DataSource.BrowserGeolocationAPI
    Dashboard.DataSource.DataGovHK.URI
    Dashboard.DataSource.HongKongObservatoryWeatherAPI
    Dashboard.DataSource.IO
    Dashboard.DataSource.JSM
    Dashboard.DataSource.LocalStorage
    Dashboard.DataSource.MisoRun
    Haxl.LocalStorage
    Home
    MapLibre
    Pomodoro
    ProductRequirementDocument
    ProductRequirementDocument.Dashboard
    ProductRequirementDocument.Home
    ProductRequirementDocument.Pomodoro
    Route
    Route.View
    Utils.Dimensional
    Utils.Fetch
    Utils.JS
    Utils.Serialise

  default-language:
    GHC2024

  if flag(local-dev)
    buildable: False

  if arch(javascript)
    js-sources: temp-fix.js
  ghc-options: -Wall

  if flag(production)
    cpp-options:
      -DPRODUCTION

executable fanshi1028-site
  import:
    wasm

  if flag(local-dev)
    import: lib
  else
    build-depends:
      fanshi1028-site

  main-is:
    Main.hs

  build-depends:
    base <5,
    miso,

  if flag(production)
    cpp-options:
      -DPRODUCTION
  else
    build-depends:
      file-embed

  hs-source-dirs:
    app

  default-language:
    GHC2024

  ghc-options:
    -funbox-strict-fields
    -O2
    -ferror-spans
    -fspecialise-aggressively
    -Wall

executable prerender
  if flag(local-dev)
    import: lib
  else
    build-depends:
      fanshi1028-site

  main-is:
    Main.hs

  build-depends:
    base <5,
    bytestring,
    file-io,
    filepath,
    miso,
    unliftio,

  hs-source-dirs:
    prerender

  default-language:
    GHC2024

  ghc-options:
    -O0
    -Wall
