cabal-version: 3.0
name: fanshi1028-site
version: 0.1.0.0
synopsis: fanshi1028's personal site
description: fanshi1028's personal site
license: MIT
license-file: LICENSE
author: fanshi1028
maintainer: fanshi1028
copyright: fanshi1028 @ 2025
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

-- NOTE: https://mercurytechnologies.github.io/ghciwatch/integration/multiple-components.html
flag local-dev
  description: enable local dev (for using ghciwatch)
  default: False
  manual: True

flag production
  description: production
  default: False
  manual: True

flag prerender-wasm
  description: prerender for wasm version of the site
  default: False
  manual: True

common lib
  build-depends:
    async,
    base <5,
    base64,
    bytestring,
    cassava,
    containers,
    data-interval,
    dimensional,
    hashable,
    hashtables,
    haxl,
    http-types,
    lens,
    miso,
    mtl,
    network-uri,
    retry,
    scientific,
    serialise,
    text,
    time,
    unliftio,
    validation-selective,
    vector,
    xml,

  hs-source-dirs:
    src

  if flag(local-dev)
    -- cabal-gild: discover src
    other-modules:
      App
      App.View
      Component.Clock
      Component.Clock.View
      Component.Dashboard
      Component.Dashboard.View
      Component.Foreign.MapLibre
      Component.Pomodoro
      Component.Pomodoro.View
      DataSource.BrowserGeolocationAPI
      DataSource.CommonSpatialDataInfrastructurePortal
      DataSource.HongKongObservatoryWeatherAPI
      DataSource.HongKongObservatoryWeatherAPI.Types
      DataSource.IO
      DataSource.LocalStorage
      DataSource.MisoRun
      DataSource.SimpleFetch
      Utils.Dimensional
      Utils.Haxl
      Utils.IntervalPeriod
      Utils.JSON
      Utils.Serialise
      View.ProductRequirementDocument
      View.ProductRequirementDocument.Dashboard
      View.ProductRequirementDocument.Home
      View.ProductRequirementDocument.Pomodoro
      View.SVG.LoadSpinner
      View.SVG.ToggleLangButton

library
  import: lib
  -- cabal-gild: discover src
  exposed-modules:
    App
    App.View
    Component.Clock
    Component.Clock.View
    Component.Dashboard
    Component.Dashboard.View
    Component.Foreign.MapLibre
    Component.Pomodoro
    Component.Pomodoro.View
    DataSource.BrowserGeolocationAPI
    DataSource.CommonSpatialDataInfrastructurePortal
    DataSource.HongKongObservatoryWeatherAPI
    DataSource.HongKongObservatoryWeatherAPI.Types
    DataSource.IO
    DataSource.LocalStorage
    DataSource.MisoRun
    DataSource.SimpleFetch
    Utils.Dimensional
    Utils.Haxl
    Utils.IntervalPeriod
    Utils.JSON
    Utils.Serialise
    View.ProductRequirementDocument
    View.ProductRequirementDocument.Dashboard
    View.ProductRequirementDocument.Home
    View.ProductRequirementDocument.Pomodoro
    View.SVG.LoadSpinner
    View.SVG.ToggleLangButton

  default-language:
    GHC2024

  if flag(local-dev)
    buildable: False

  if arch(javascript)
    js-sources: jsbits/temp-fix.js
  ghc-options: -Wall

  if flag(production)
    cpp-options:
      -DPRODUCTION

  if arch(wasm32) || flag(prerender-wasm)
    cpp-options: -DWASM

executable fanshi1028-site
  if flag(local-dev)
    import: lib
  else
    build-depends:
      fanshi1028-site

  main-is:
    Main.hs

  build-depends:
    base <5,
    miso,

  hs-source-dirs:
    app

  default-language:
    GHC2024

  ghc-options:
    -funbox-strict-fields
    -O2
    -ferror-spans
    -fspecialise-aggressively
    -Wall

  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"

executable prerender
  if flag(local-dev)
    import: lib
  else
    build-depends:
      fanshi1028-site

  main-is:
    Main.hs

  build-depends:
    base <5,
    bytestring,
    directory,
    file-io,
    filepath,
    miso,

  hs-source-dirs:
    prerender

  default-language:
    GHC2024

  ghc-options:
    -O0
    -Wall

  if flag(prerender-wasm)
    cpp-options: -DWASM
